BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Campaign_vod__c.object
<CustomObject>
    <description>Stores the general information for a marketing campaign.</description>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Description of the marketing campaign</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date_vod__c</fullName>
        <description>Date the campaign ends.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_vod__c</fullName>
        <description>Date the campaign begins.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Campaign</label>
    <nameField>
        <label>Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>